server mm : rev 2 refeed transport/content layer

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -99,11 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::net::TcpListener;\n",
@@ -294,11 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -518,11 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -657,11 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -750,11 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -839,11 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -958,11 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -1071,11 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -1232,11 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -1312,7 +1276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating a Finite Number of Threads\n",
+    "### [X] Creating a Finite Number of Threads\n",
     "\n",
     "We want our thread pool to work in a similar, familiar way so switching from  \n",
     "threads to a thread pool doesn’t require large changes to the code that uses  \n",
@@ -1324,12 +1288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -1436,11 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pub struct ThreadPool;"
@@ -1460,11 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -1511,11 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pub struct ThreadPool;\n",
@@ -1600,11 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pub struct ThreadPool;\n",
@@ -1674,11 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pub struct ThreadPool;\n",
@@ -1762,11 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::thread;\n",
@@ -1867,11 +1803,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::thread;\n",
@@ -1981,12 +1913,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{sync::mpsc, thread};\n",
@@ -2007,11 +1935,11 @@
     "}\n",
     "\n",
     "pub struct ThreadPool{\n",
-    "    workers : vec<Worker>,\n",
-    "    sender : mpsc:Sender<Job>,\n",
+    "    workers : Vec<Worker>,\n",
+    "    sender : mpsc::Sender<Job>,\n",
     "}\n",
     "\n",
-    "impl TheadPool{\n",
+    "impl ThreadPool{\n",
     "    pub fn new(size: usize) -> ThreadPool{\n",
     "        assert!(size > 0);\n",
     "\n",
@@ -2025,7 +1953,31 @@
     "\n",
     "        ThreadPool{ workers, sender }\n",
     "    }\n",
+    "\n",
+    "    pub fn execute<F>(&self, f:F)\n",
+    "    where\n",
+    "        F: FnOnce() + Send + 'static\n",
+    "    {}\n",
     "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-16: Modifying ThreadPool to store the sender of a channel that  \n",
+    "transmits Job instances\n",
+    "\n",
+    "In ThreadPool::new, we create our new channel and have the pool hold the  \n",
+    "sender. This will successfully compile.\n",
+    "\n",
+    "Let’s try passing a receiver of the channel into each worker as the thread pool  \n",
+    "creates the channel. We know we want to use the receiver in the thread that the  \n",
+    "workers spawn, so we’ll reference the receiver parameter in the closure. The  \n",
+    "code in Listing 20-17 won’t quite compile yet.\n",
+    "\n",
+    "> Filename: src/lib.rs"
    ]
   }
  ],
@@ -2039,7 +1991,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "Rust",
+   "name": "rust",
    "pygment_lexer": "rust",
    "version": ""
   },
