ch_20_final_server : rev 9 arc/mutex receiver

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "- connecting to a `port` to `listen` to is known as “binding to a port.”\n",
     "\n",
-    "#### -- TCPListener::bind() returns Result<T,E> to handle ERRORS --\n",
+    "#### -- TcpListener::bind() returns Result<T,E> to handle ERRORS --\n",
     "\n",
     "The `bind` function returns a `Result<T, E>`, which indicates that it’s  \n",
     "possible for binding to fail. For example :  \n",
@@ -1288,9 +1288,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "thread '<unnamed>' panicked at 'called `Result::unwrap()` on an `Err` value: SendError { .. }', src/lib.rs:34:31\n",
+      "stack backtrace:\n",
+      "   0: _rust_begin_unwind\n",
+      "   1: core::panicking::panic_fmt\n",
+      "   2: core::result::unwrap_failed\n",
+      "   3: ctx::ThreadPool::execute\n",
+      "   4: std::panicking::try\n",
+      "   5: _run_user_code_8\n",
+      "   6: evcxr::runtime::Runtime::run_loop\n",
+      "   7: evcxr::runtime::runtime_hook\n",
+      "   8: evcxr_jupyter::main\n",
+      "note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.\n"
+     ]
+    }
+   ],
    "source": [
     "use std::{\n",
     "    fs,\n",
@@ -1913,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1976,6 +1995,318 @@
     "creates the channel. We know we want to use the receiver in the thread that the  \n",
     "workers spawn, so we’ll reference the receiver parameter in the closure. The  \n",
     "code in Listing 20-17 won’t quite compile yet.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "unused variable: `f`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[unused_variables] Error:\u001b[0m unused variable: `f`",
+      "    \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_9:1:1\u001b[38;5;246m]\u001b[0m",
+      "    \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m40 │\u001b[0m \u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mp\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mb\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mf\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mx\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mc\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249m<\u001b[0m\u001b[38;5;249mF\u001b[0m\u001b[38;5;249m>\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m&\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249mf\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54mf\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249mF\u001b[0m\u001b[38;5;249m)\u001b[0m",
+      " \u001b[38;5;246m   ·\u001b[0m                              \u001b[38;5;54m┬\u001b[0m  ",
+      " \u001b[38;5;246m   ·\u001b[0m                              \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m warning: unused variable: `f`",
+      " \u001b[38;5;246m   ·\u001b[0m                              \u001b[38;5;100m│\u001b[0m  ",
+      " \u001b[38;5;246m   ·\u001b[0m                              \u001b[38;5;100m╰\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m help: if this is intentional, prefix it with an underscore: `_f`",
+      "\u001b[38;5;246m────╯\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "use of moved value: `receiver`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0382] Error:\u001b[0m use of moved value: `receiver`",
+      "    \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_9:1:1\u001b[38;5;246m]\u001b[0m",
+      "    \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m29 │\u001b[0m \u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249md\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;100mr\u001b[0m\u001b[38;5;100me\u001b[0m\u001b[38;5;100mc\u001b[0m\u001b[38;5;100me\u001b[0m\u001b[38;5;100mi\u001b[0m\u001b[38;5;100mv\u001b[0m\u001b[38;5;100me\u001b[0m\u001b[38;5;100mr\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m=\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mp\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249mc\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249mc\u001b[0m\u001b[38;5;249mh\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m;\u001b[0m",
+      " \u001b[38;5;246m   ·\u001b[0m                      \u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m┬\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m  ",
+      " \u001b[38;5;246m   ·\u001b[0m                          \u001b[38;5;100m╰\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m move occurs because `receiver` has type `std::sync::mpsc::Receiver<Job>`, which does not implement the `Copy` trait",
+      " \u001b[38;5;246m   ·\u001b[0m ",
+      " \u001b[38;5;246m34 │\u001b[0m \u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mw\u001b[0m\u001b[38;5;249mo\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249mk\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249m.\u001b[0m\u001b[38;5;249mp\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249mh\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249mW\u001b[0m\u001b[38;5;249mo\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249mk\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mw\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249md\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54mr\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54mc\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54mi\u001b[0m\u001b[38;5;54mv\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54mr\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m;\u001b[0m",
+      " \u001b[38;5;246m   ·\u001b[0m                                          \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m  ",
+      " \u001b[38;5;246m   ·\u001b[0m                                              \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m value moved here, in previous iteration of loop",
+      "\u001b[38;5;246m────╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "use std::{sync::mpsc, thread};\n",
+    "\n",
+    "struct Job;\n",
+    "\n",
+    "pub struct Worker{\n",
+    "    id: usize,\n",
+    "    thread: thread::JoinHandle<()>,\n",
+    "}\n",
+    "\n",
+    "impl Worker {\n",
+    "    fn new(id: usize, receiver: mpsc::Receiver<Job>) -> Worker {\n",
+    "        let thread = thread::spawn(|| {\n",
+    "            receiver;\n",
+    "        });\n",
+    "\n",
+    "        Worker { id, thread }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pub struct ThreadPool{\n",
+    "    workers : Vec<Worker>,\n",
+    "    sender : mpsc::Sender<Job>,\n",
+    "}\n",
+    "\n",
+    "impl ThreadPool{\n",
+    "    pub fn new(size: usize) -> ThreadPool{\n",
+    "        assert!(size > 0);\n",
+    "\n",
+    "        let (sender, receiver) = mpsc::channel();\n",
+    "\n",
+    "        let mut workers = Vec::with_capacity(size);\n",
+    "\n",
+    "        for id in 0..size{\n",
+    "            workers.push(Worker::new(id, receiver));\n",
+    "        }\n",
+    "\n",
+    "        ThreadPool {workers, sender}\n",
+    "    }\n",
+    "\n",
+    "    pub fn execute<F>(&self, f:F)\n",
+    "    where\n",
+    "        F: FnOnce() + Send + 'static\n",
+    "    {}\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-17: Passing the receiver to the workers\n",
+    "\n",
+    "We’ve made some small and straightforward changes:  \n",
+    "\n",
+    "- we pass the receiver into  Worker::new, and  \n",
+    "- then we use it inside the closure.\n",
+    "\n",
+    "When we try to check this code, we get this error:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo check\n",
+    "    Checking hello v0.1.0 (file:///projects/hello)\n",
+    "error[E0382]: use of moved value: `receiver`\n",
+    "  --> src/lib.rs:26:42\n",
+    "   |\n",
+    "21 |         let (sender, receiver) = mpsc::channel();\n",
+    "   |                      -------- move occurs because `receiver` has type `std::sync::mpsc::Receiver<Job>`, which does not implement the `Copy` trait\n",
+    "...\n",
+    "26 |             workers.push(Worker::new(id, receiver));\n",
+    "   |                                          ^^^^^^^^ value moved here, in previous iteration of loop\n",
+    "\n",
+    "For more information about this error, try `rustc --explain E0382`.\n",
+    "error: could not compile `hello` due to previous error\n",
+    "```\n",
+    "\n",
+    "The code is trying to pass receiver to multiple Worker instances. This won’t  \n",
+    "work, as you’ll recall from Chapter 16: the channel implementation that Rust  \n",
+    "provides is multiple producer, single consumer. This means we can’t just clone  \n",
+    "the consuming end of the channel to fix this code. We also don’t want to send a  \n",
+    "message multiple times to multiple consumers; we want one list of messages with  \n",
+    "multiple workers such that each message gets processed once.\n",
+    "\n",
+    "Additionally, taking a job off the channel queue involves mutating the receiver,  \n",
+    "so the threads need a safe way to share and modify receiver; otherwise, we  \n",
+    "might get race conditions (as covered in Chapter 16).\n",
+    "\n",
+    "Recall the thread-safe smart pointers discussed in Chapter 16: to share  \n",
+    "ownership across multiple threads and allow the threads to mutate the value, we  \n",
+    "need to use Arc<Mutex<T>>. The Arc type will let multiple workers own the  \n",
+    "receiver, and Mutex will ensure that only one worker gets a job from the  \n",
+    "receiver at a time. Listing 20-18 shows the changes we need to make.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    sync::{mpsc, Arc, Mutex},\n",
+    "    thread,\n",
+    "};\n",
+    "\n",
+    "struct Job;\n",
+    "\n",
+    "pub struct Worker{\n",
+    "    id: usize,\n",
+    "    thread: thread::JoinHandle<()>,\n",
+    "}\n",
+    "\n",
+    "impl Worker{\n",
+    "    fn new(id: usize, receiver: Arc<Mutex<mpsc::Receiver<Job>>>) -> Worker{\n",
+    "        let thread = thread::spawn(|| {});\n",
+    "\n",
+    "        Worker{ id, thread }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pub struct ThreadPool{\n",
+    "    workers: Vec<Worker>,\n",
+    "    sender: mpsc::Sender<Job>,\n",
+    "}\n",
+    "\n",
+    "impl ThreadPool{\n",
+    "    pub fn new (size: usize) -> ThreadPool{\n",
+    "\n",
+    "        assert!(size > 0);\n",
+    "\n",
+    "        let (sender, receiver) = mpsc::channel();\n",
+    "\n",
+    "        let receiver = Arc::new(Mutex::new(receiver));\n",
+    "\n",
+    "        let mut workers = Vec::with_capacity(size);\n",
+    "\n",
+    "        for id in 0..size{\n",
+    "            workers.push(Worker::new(id, Arc::clone(&receiver)));\n",
+    "        }\n",
+    "\n",
+    "        ThreadPool{ workers, sender }\n",
+    "    }\n",
+    "\n",
+    "    pub fn execute<F>(&self, f:F)\n",
+    "    where\n",
+    "        F: FnOnce() + Send + 'static\n",
+    "    {}\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-18: Sharing the receiver among the workers using Arc and Mutex\n",
+    "\n",
+    "In ThreadPool::new, we put the receiver in an Arc and a Mutex. For each new  \n",
+    "worker, we clone the Arc to bump the reference count so the workers can share  \n",
+    "ownership of the receiver.\n",
+    "\n",
+    "With these changes, the code compiles! We’re getting there!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementing the `execute` Method\n",
+    "\n",
+    "Let’s finally implement the execute method on ThreadPool. We’ll also change Job  \n",
+    "from a struct to a type alias for a trait object that holds the type of closure  \n",
+    "that execute receives. As discussed in the “Creating Type Synonyms with Type  \n",
+    "Aliases” section of Chapter 19, type aliases allow us to make long types  \n",
+    "shorter for ease of use. Look at Listing 20-19.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    sync::{mpsc, Arc, Mutex},\n",
+    "    thread,\n",
+    "};\n",
+    "\n",
+    "type Job = Box<dyn FnOnce() + Send + 'static>;\n",
+    "\n",
+    "pub struct Worker{\n",
+    "    id: usize,\n",
+    "    thread: thread::JoinHandle<()>,\n",
+    "}\n",
+    "\n",
+    "impl Worker{\n",
+    "    fn new(id: usize, receiver: Arc<Mutex<mpsc::Receiver<Job>>>) -> Worker{\n",
+    "        let thread = thread::spawn(|| {});\n",
+    "\n",
+    "        Worker{ id, thread }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pub struct ThreadPool{\n",
+    "    workers: Vec<Worker>,\n",
+    "    sender: mpsc::Sender<Job>,\n",
+    "}\n",
+    "\n",
+    "impl ThreadPool{\n",
+    "\n",
+    "    pub fn new(size: usize) -> ThreadPool{\n",
+    "        assert!(size > 0);\n",
+    "\n",
+    "        let (sender, receiver) = mpsc::channel();\n",
+    "\n",
+    "        let receiver = Arc::new(Mutex::new(receiver));\n",
+    "\n",
+    "        let mut workers = Vec::with_capacity(size);\n",
+    "\n",
+    "        for id in 0..size{\n",
+    "            workers.push(Worker::new(id, Arc::clone(&receiver)));\n",
+    "        }\n",
+    "\n",
+    "        ThreadPool{ workers, sender }\n",
+    "    }\n",
+    "\n",
+    "    pub fn execute<F>(&self, f: F)\n",
+    "    where\n",
+    "        F: FnOnce() + Send + 'static,\n",
+    "    {\n",
+    "        let job = Box::new(f);\n",
+    "\n",
+    "        self.sender.send(job).unwrap();\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-19: Creating a Job type alias for a Box that holds each closure  \n",
+    "and then sending the job down the channel\n",
+    "\n",
+    "After creating a new Job instance using the closure we get in execute, we send  \n",
+    "that job down the sending end of the channel. We’re calling unwrap on send for  \n",
+    "the case that sending fails. This might happen if, for example, we stop all our  \n",
+    "threads from executing, meaning the receiving end has stopped receiving new  \n",
+    "messages.  \n",
+    "\n",
+    "At the moment, we can’t stop our threads from executing:  \n",
+    "\n",
+    "- our threads continue executing as long as the pool exists.  \n",
+    "- The reason we use unwrap is that we know the failure case won’t happen,  \n",
+    "- but the compiler doesn’t know that.\n",
+    "\n",
+    "But we’re not quite done yet! In the worker, our closure being passed to  \n",
+    "thread::spawn still only references the receiving end of the channel. Instead,  \n",
+    "we need the closure to loop forever, asking the receiving end of the channel  \n",
+    "for a job and running the job when it gets one. Let’s make the change shown in  \n",
+    "Listing 20-20 to Worker::new.\n",
     "\n",
     "> Filename: src/lib.rs"
    ]
