ch_20_final_serfer : rev 11 clean server shut down

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -1343,18 +1343,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Worker 3 got a job; executing.\n",
-      "Worker 0 got a job; executing.\n",
-      "Worker 2 got a job; executing.\n",
-      "Worker 1 got a job; executing.\n",
-      "Worker 3 got a job; executing.\n",
-      "Worker 0 got a job; executing.\n",
-      "Worker 1 got a job; executing.\n",
-      "Worker 2 got a job; executing.\n",
-      "Worker 3 got a job; executing.\n",
-      "Worker 0 got a job; executing.\n",
-      "Worker 1 got a job; executing.\n",
-      "Worker 2 got a job; executing.\n"
+      "Worker 1 got a job -> executing\n",
+      "Worker 2 got a job -> executing\n",
+      "Worker 3 got a job -> executing\n",
+      "Worker 0 got a job -> executing\n",
+      "Worker 1 got a job -> executing\n",
+      "Worker 2 got a job -> executing\n",
+      "Worker 3 got a job -> executing\n"
      ]
     }
    ],
@@ -2867,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2944,7 +2939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2975,6 +2970,241 @@
     "the thread; then we call join on the thread. If a worker’s thread is already  \n",
     "None, we know that worker has already had its thread cleaned up, so nothing  \n",
     "happens in that case."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Signaling to the Threads to Stop Listening for Jobs\n",
+    "\n",
+    "With all the changes we’ve made, our code compiles without any warnings.  \n",
+    "However, the bad news is this code doesn’t function the way we want it to yet.  \n",
+    "The key is the logic in the closures run by the threads of the Worker instances:  \n",
+    "at the moment, we call join, but that won’t shut down the threads because they  \n",
+    "loop forever looking for jobs. If we try to drop our ThreadPool with our current  \n",
+    "implementation of drop, the main thread will block forever waiting for the first  \n",
+    "thread to finish.\n",
+    "\n",
+    "To fix this problem, we’ll need a change in the ThreadPool drop implementation  \n",
+    "and then a change in the Worker loop.\n",
+    "\n",
+    "First, we’ll change the ThreadPool drop implementation to explicitly drop the  \n",
+    "sender before waiting for the threads to finish. Listing 20-23 shows the changes  \n",
+    "to ThreadPool to explicitly drop sender. We use the same Option and take  \n",
+    "technique as we did with the thread to be able to move sender out of ThreadPool:\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pub struct ThreadPool{\n",
+    "    workers: Vec<Worker>,\n",
+    "    sender: Option<mpsc::Sender<Job>>,\n",
+    "}\n",
+    "\n",
+    "impl ThreadPool{\n",
+    "    pub fn new(size: usize) -> ThreadPool{\n",
+    "        assert!(size > 0);\n",
+    "        let (sender, receiver) = mpsc::channel();\n",
+    "        let receiver = Arc::new(Mutex::new(receiver));\n",
+    "        let mut workers = Vec::with_capacity(size);\n",
+    "\n",
+    "        for id in 0..size{\n",
+    "            workers.push(Worker::new(id, Arc::clone(&receiver)));\n",
+    "        }\n",
+    "\n",
+    "        ThreadPool{\n",
+    "            workers,\n",
+    "            sender: Some(sender),\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    pub fn execute<F>(&self, f:F)\n",
+    "    where\n",
+    "        F: FnOnce() + Send + 'static,\n",
+    "    {\n",
+    "        let job = Box::new(f);\n",
+    "        self.sender.as_ref().unwrap().send(job).unwrap();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "impl Drop for ThreadPool{\n",
+    "    fn drop(&mut self){\n",
+    "        drop(self.sender.take());\n",
+    "\n",
+    "        for worker in &mut self.workers{\n",
+    "            println!(\"Shutting down worker {}\", worker.id);\n",
+    "\n",
+    "            if let Some(thread) = worker.thread.take(){\n",
+    "                thread.join().unwrap();\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-23: Explicitly drop sender before joining the worker threads\n",
+    "\n",
+    "Dropping sender closes the channel, which indicates no more messages will be  \n",
+    "sent. When that happens, all the calls to recv that the workers do in the  \n",
+    "infinite loop will return an error. In Listing 20-24, we change the Worker  \n",
+    "loop to gracefully exit the loop in that case, which means the threads will  \n",
+    "finish when the ThreadPool drop implementation calls join on them.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "struct Worker{\n",
+    "    id: usize,\n",
+    "    thread: Option<thread::JoinHandle<()>>,\n",
+    "}\n",
+    "\n",
+    "impl Worker{\n",
+    "    fn new(id: usize, receiver: Arc<Mutex<mpsc::Receiver<Job>>>)-> Worker{\n",
+    "        let thread = thread::spawn(move || loop{\n",
+    "            let message = receiver.lock().unwrap().recv();\n",
+    "\n",
+    "            match message{\n",
+    "                Ok(job) => {\n",
+    "                    println!(\"Worker {id} got a job -> executing\");\n",
+    "                    job();\n",
+    "                }\n",
+    "                Err(_) => {\n",
+    "                    println!(\"Worker {id} disconnected -> shutting down\");\n",
+    "                    break;\n",
+    "                }\n",
+    "            }\n",
+    "        });\n",
+    "\n",
+    "        Worker{\n",
+    "            id,\n",
+    "            thread: Some(thread),\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-24: Explicitly break out of the loop when recv returns an error\n",
+    "\n",
+    "#### [X] Handle Graceful Server Shutdown\n",
+    "\n",
+    "To see this code in action, let’s modify main to accept only two requests  \n",
+    "before gracefully shutting down the server, as shown in Listing 20-25.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Worker 2 got a job -> executing\n",
+      "Shutting down.\n",
+      "Worker 3 got a job -> executing\n",
+      "Worker 1 disconnected -> shutting down\n",
+      "Worker 0 disconnected -> shutting down\n",
+      "Worker 2 disconnected -> shutting down\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use std::{\n",
+    "    fs,\n",
+    "    io::{prelude::*, BufReader},\n",
+    "    net::{TcpListener, TcpStream},\n",
+    "    thread,\n",
+    "    time::Duration,\n",
+    "}\n",
+    "\n",
+    "fn handle_connection_serial(mut stream: TcpStream){\n",
+    "    let buf_reader = BufReader::new(&mut stream);\n",
+    "    let request_line = buf_reader.lines().next().unwrap().unwrap();\n",
+    "\n",
+    "    let (status_line, filename) = match &request_line[..] {\n",
+    "        \"GET / HTTP/1.1\" => (\"HTTP/1.1 200 OK\", \"hello.html\"),\n",
+    "        \"GET /sleep HTTP/1.1\" => {\n",
+    "            thread::sleep(Duration::from_secs(5));\n",
+    "            (\"HTTP/1.1 200 OK\", \"hello_sleep.html\")\n",
+    "        }\n",
+    "        _ => (\"HTTP/1.1 404 NOT FOUND\", \"404.html\"),\n",
+    "    };\n",
+    "\n",
+    "    let contents = fs::read_to_string(filename).unwrap();\n",
+    "    let length = contents.len();\n",
+    "\n",
+    "    let response =\n",
+    "        format!(\n",
+    "            \"{status_line}\\r\\nContent-Length: {length}\\r\\n\\r\\n{contents}\"\n",
+    "        );\n",
+    "\n",
+    "    stream.write_all(response.as_bytes()).unwrap();\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let listener = TcpListener::bind(\"127.0.0.1:7878\").unwrap();\n",
+    "    let pool = ThreadPool::new(4);\n",
+    "\n",
+    "    for stream in listener.incoming().take(2){\n",
+    "        let stream = stream.unwrap();\n",
+    "\n",
+    "        pool.execute(|| {\n",
+    "            handle_connection_serial(stream);\n",
+    "        });\n",
+    "    }\n",
+    "\n",
+    "    println!(\"Shutting down.\");\n",
+    "}"
    ]
   }
  ],
